src/assets/home.css
html, body {
  margin: 0;
  padding: 0;
  font-family:Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
  background:#fefefe;
}

h1,h2,h3,h4,h5,h6{
font-weight:400;
color:#111;
line-height:1em;
font-family: "Gill Sans", "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
}
h4,h5,h6{ font-weight: bold; }
h1{ font-size:3.2em; }
h2{ font-size:2em; }
h3{ font-size:1.5em; }
h4{ font-size:1.2em; }
h5{ font-size:1em; }
h6{ font-size:0.9em; }

header {
  background: #21374B;
  color: #E7DACB;
  text-align: center;
  padding: 80px 0 50px 0;
  font-family: "Gill Sans", "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.logo {
  width: 70%;
  max-width: 300px;
  margin-bottom: 10px;
}

header h2 {
  margin: 0;
  font-size: 1.5em;
  color: #E7DACB;
}

.parcel {
  display: block;
  max-width: 600px;
  margin: 0 auto;
  margin-top: 120px;
  position: relative;
}

.parcel img {
  width: 100%;
}

.parcel .icons {
  position: absolute;
  top: -100px;
  left: 0;
  width: 100%;
}

.parcel img:last-child {
  position: absolute;
  top: 0;
  left: 0;
}

.icon {
  width: 42px;
  height: 65px;
  background-size: cover;
  position: absolute;
  left: 0;
  animation: animate 3s ease-in-out;
  opacity: 0;
}

@keyframes animate {
  from {
    transform: translate3d(0, 0, 0);
    opacity: 0;
  }

  25% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  to {
    transform: translate3d(0, 450%, 0) scale(0.9);
    opacity: 0;
  }
}

.button {
  display: inline-block;
  padding: 8px 0;
  width: 180px;
  color: #E7DACB;
  border: 1px solid #E7DACB;
  border-radius: 50px;
  text-decoration: none;
  font-family: "Gill Sans", "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
  transition: opacity 200ms;
  text-align: center;
  margin: 0 5px;
}

.button:hover {
  opacity: 1;
}

.get-started {
  background: #E7DACB;
  color: #21374B;
}

header .links {
  position: absolute;
  top: 0;
  right: 0;
  padding: 20px;
}

header .links a {
  color: #E7DACB;
  text-decoration: none;
  padding-left: 20px;
  transition: color 125ms;
}

header .links a:hover {
  color: #27ae60;
}

.language-dropdown {
  display: inline-block;
  cursor: pointer;
  position: relative;
  padding: 0 10px;
  border-radius: 4px;
  font-size: 22px;
  vertical-align: middle;
}

.language-dropdown ul {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: #E7DACB;
  list-style-type: none;
  margin: 0;
  padding: 0;
  border-radius: 0 0 4px 4px;
  overflow: hidden;
}

.language-dropdown li {
  margin: 0;
  padding: 0 10px;
}

.language-dropdown li a {
  padding: 0;
}

.language-dropdown li:hover {
  background-color: #27ae60;
}

.language-dropdown:hover {
  background-color: #E7DACB;
  border-radius: 4px 4px 0 0;
}

.language-dropdown:hover ul {
  display: block;
}

main {
  max-width: 1000px;
  margin: 0 auto;
  color:#444;
  font-size:16px;
  line-height:1.5em;
}

main section {
  padding: 0 20px;
  box-sizing: border-box;
}

main > section {
  padding-top: 10px;
}

.features {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin-top: 20px;
}

.features section {
  width: 333px;
  padding: 0 20px;
}

pre, code, kbd, samp { color: #000; font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace; font-size: 0.98em; }
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; font-size: 12px; }

p code {
  font-size: 0.95em;
  background-color: #f8f8f8;
  border-radius: 3px;
  padding: 0 0.2em;
  display: inline-block;
}

table {
  border-spacing: 0;
  border-collapse: collapse;
}

tr:nth-child(2n + 1) {
  background: #efefef;
}

td, th {
  padding: 5px 10px;
  text-align: left;
  border: 1px solid #ddd;
}

.examples {
  display: flex;
  flex-wrap: wrap;
}

.example {
  width: 50%;
  box-sizing: border-box;
}

.example:nth-child(2n) {
  padding-left: 20px;
}

footer {
  background: #21374B;
  color: #E7DACB;
  font-family: "Gill Sans", "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 40px 0 20px 0;
  margin-top: 40px;
  text-align: center;
}

footer .content {
  display: flex;
  max-width: 960px;
  justify-content: center;
  margin: 0 auto;
  text-align: left;
}

footer nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  padding-right: 80px;
}

footer nav a,
footer .copyright a {
  color: #E7DACB;
  text-decoration: none;
  transition: color 125ms;
  line-height: 1.7em;
}

footer nav a:hover,
footer .copyright a:hover {
  color: #27ae60;
}

footer .button {
  margin-bottom: 40px;
  font-size: 20px;
}

footer h3 {
  font-weight: 600;
  text-transform: uppercase;
  font-size: 13px;
  opacity: 0.7;
  color: #E7DACB;
}

footer .copyright {
  margin-top: 40px;
  color: rgba(231, 218, 203, 0.7);
  font-size: 14px;
}

footer .copyright a {
  color: rgba(231, 218, 203, 0.7);
}

@media only screen and (max-width: 770px) {
  .example {
    width: 100%;
    padding-left: 0 !important;
  }
}

@media only screen and (max-width: 480px) {
  header {
    padding-top: 60px;
    padding-bottom: 15px;
  }

  header h2 {
    font-size: 1.2em;
    padding: 0 40px;
  }

  header .button {
    margin: 5px;
  }

  .logo {
    margin-bottom: 10px;
  }

  .parcel {
    margin-top: 120px;
  }

  .icon {
    width: 40px;
    height: 52px;
  }

  .button {
    margin-top: 0;
  }

  .features section {
    padding: 0;
  }

  footer .content {
    flex-direction: column;
    align-items: center;
  }

  footer nav ul {
    padding-right: 0;
    display: block;
    width: 200px;
  }

  footer nav {
    padding-bottom: 20px;
  }

  footer .copyright {
    width: 200px;
    margin: 0 auto;
  }
}

